chip was refactored

--- a/app/pug/employee-settings.pug
+++ b/app/pug/employee-settings.pug
@@ -4,6 +4,7 @@ include /partials/alert
 include /partials/password-change-modal
 include /partials/password-change-success-modal
 include /partials/edit-avatar-modal
+include /partials/change-position-dropdown
 
 block variables
   - const title = 'Employee Settings page'
