--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -41,11 +41,12 @@ $body-bg: $c-athens-gray
 // Sizes
 $header-height: 80px
 // Radiuses
-$r-primary  : 3px
-$r-secondary: 10px
+$r-type-1: 3px
+$r-type-2: 6px
+$r-type-3: 10px
 // Shadows
-$s-primary  : 0px 4px 5px rgba(0, 0, 0, 0.05)
-$s-secondary: -5px 0 20px 0 rgba(0,0,0,.25)
-$s-alt      : 0px 0px 8px -4px rgba(0,0,0,0.75)
+$s-type-1: 0px 4px 5px rgba(0, 0, 0, 0.05)
+$s-type-2: -5px 0 20px 0 rgba(0,0,0,.25)
+$s-type-3: 0px 0px 8px -4px rgba(0,0,0,0.75)
 // Overlays
-$o-primary: rgba(0, 0, 0, 0.54)
+$o-type-1: rgba(0, 0, 0, 0.54)
