--- a/app/sass/components/application-form.sass
+++ b/app/sass/components/application-form.sass
@@ -7,8 +7,8 @@
       margin-bottom: 20px
   &__card
     background-color: $c-white
-    border-radius: $r-primary
-    box-shadow: $s-primary
+    border-radius: $r-type-1
+    box-shadow: $s-type-1
     padding: 30px 60px
     +media-max($bp-lg)
       padding: 30px 30px
