--- a/app/sass/components/button/button-radiuses.sass
+++ b/app/sass/components/button/button-radiuses.sass
@@ -1,4 +1,4 @@
 .button
-  @each $name, $radius in ('primary':$r-primary, 'secondary':$r-secondary)
+  @each $name, $radius in ('primary':$r-type-1, 'secondary':$r-type-3)
     &--radius-#{$name}
       border-radius: $radius
