--- a/app/sass/components/button/button-types.sass
+++ b/app/sass/components/button/button-types.sass
@@ -14,6 +14,6 @@
   &--round
     border-radius: 50%
   &--shadow
-    box-shadow: $s-primary
+    box-shadow: $s-type-1
   &--start
     justify-content: flex-start
