--- a/app/sass/components/catalog-navigation.sass
+++ b/app/sass/components/catalog-navigation.sass
@@ -9,8 +9,8 @@ $size: 50px
     height: $size
     padding: 0 20px
     background-color: $c-white
-    border-radius: $r-secondary
-    box-shadow: $s-primary
+    border-radius: $r-type-3
+    box-shadow: $s-type-1
     font-size: rem(14px)
     line-height: 1
     font-weight: 400
@@ -23,7 +23,7 @@ $size: 50px
       height: 25px
       display: flex
       border: 1px solid $c-alto
-      border-radius: $r-secondary
+      border-radius: $r-type-3
       text-align: center
       color: $c-mine-shaft
       margin-right: 5px
