--- a/app/sass/components/dropdown.sass
+++ b/app/sass/components/dropdown.sass
@@ -14,6 +14,6 @@
     margin-bottom: 20px
     overflow: hidden
     background-color: $c-white
-    border-radius: $r-primary
-    box-shadow: $s-alt
+    border-radius: $r-type-1
+    box-shadow: $s-type-3
     z-index: 200
