--- a/app/sass/components/header.sass
+++ b/app/sass/components/header.sass
@@ -1,8 +1,8 @@
 .header
   width: 100%
   background-color: $c-white
-  box-shadow: $s-primary
-  border-radius: 0 0 $r-secondary $r-secondary
+  box-shadow: $s-type-1
+  border-radius: 0 0 $r-type-3 $r-type-3
   &__wrap
     display: flex
     width: 100%
@@ -57,7 +57,7 @@
       transform: translateX(100%)
       z-index: 20
       &.is-active
-        box-shadow: $s-secondary
+        box-shadow: $s-type-2
         transform: translateX(0)
   &__dropdowns
     display: flex
