--- a/app/sass/components/inner-header.sass
+++ b/app/sass/components/inner-header.sass
@@ -1,8 +1,8 @@
 .inner-header
   width: 100%
   background-color: $c-white
-  box-shadow: $s-primary
-  border-radius: 0 0 $r-secondary $r-secondary
+  box-shadow: $s-type-1
+  border-radius: 0 0 $r-type-3 $r-type-3
   &__wrap
     display: flex
     margin: 0 auto
