--- a/app/sass/components/input/input.sass
+++ b/app/sass/components/input/input.sass
@@ -5,12 +5,13 @@
   font-size: rem(14px)
   line-height: 1
   font-weight: 400
-  border-radius: $r-primary
+  border-radius: $r-type-1
   background-color: transparent
   border: 1px solid transparent
   transition: 0.2s
 
 @import ./input-backgrounds
 @import ./input-borders
+@import ./input-radiuses
 @import ./input-sizes
 @import ./input-states
