--- a/app/sass/components/lang-combinations-dropdown.sass
+++ b/app/sass/components/lang-combinations-dropdown.sass
@@ -6,7 +6,7 @@
     height: 20px
     width: 20px
     border: 2px solid $c-surfie-green
-    border-radius: $r-primary
+    border-radius: $r-type-1
     &-icon
       transition: transform 0.2s
     &.is-active
