--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -6,9 +6,9 @@ $select-height: 40px
   display: block
   user-select: none
   &.is-expanded
-    border-radius: $r-primary $r-primary 0 0
+    border-radius: $r-type-1 $r-type-1 0 0
     .select__label
-      border-radius: $r-primary $r-primary 0 0
+      border-radius: $r-type-1 $r-type-1 0 0
       &:after
         transform: rotate(180deg)
 
@@ -56,7 +56,7 @@ $select-height: 40px
     height: $select-height
     background-color: $c-alabaster
     border: 1px solid transparent
-    border-radius: $r-primary
+    border-radius: $r-type-1
     display: flex
     width: 100%
     align-items: center
@@ -84,7 +84,7 @@ $select-height: 40px
       width: 30px
       height: 100%
       background-color: $c-alabaster
-      border-radius: 0 $r-primary $r-primary 0
+      border-radius: 0 $r-type-1 $r-type-1 0
     &:after
       transition: 0.2s
       right: 17px
@@ -98,7 +98,7 @@ $select-height: 40px
     min-width: 100%
     top: 100%
     background-color: $c-white
-    border-radius: 0 0 $r-primary $r-primary
+    border-radius: 0 0 $r-type-1 $r-type-1
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15)
     overflow: hidden
     z-index: 200
