--- a/app/sass/components/skill-checkbox.sass
+++ b/app/sass/components/skill-checkbox.sass
@@ -8,7 +8,7 @@
     justify-content: space-between
     padding: 9px 15px 10px
     border: 1px solid $c-alto
-    border-radius: $r-primary
+    border-radius: $r-type-2
     transition: 0.2s
     user-select: none
     &__title
