--- a/app/sass/components/skills-dropdown.sass
+++ b/app/sass/components/skills-dropdown.sass
@@ -14,9 +14,8 @@
     margin-bottom: 20px
   &__search
     margin-bottom: 20px
-  &__variants
+  &__title
+    margin-bottom: 10px
+  &__wrap
     margin-bottom: 15px
-    &-title
-      margin-bottom: 10px
-    &-container
-      max-height: 240px
+    max-height: 240px
