--- a/app/sass/components/textarea.sass
+++ b/app/sass/components/textarea.sass
@@ -5,7 +5,7 @@
   font-size: rem(15px)
   line-height: 1
   font-weight: 400
-  border-radius: $r-primary
+  border-radius: $r-type-1
   color: $c-tundora
   background-color: $c-white
   border: 1px solid $c-alto
