--- a/app/sass/components/tooltip.sass
+++ b/app/sass/components/tooltip.sass
@@ -13,9 +13,9 @@
     right: 2px
     background-color: $c-white
     padding: 10px 25px
-    border-radius: $r-primary
+    border-radius: $r-type-1
     z-index: 1
-    box-shadow: $s-alt
+    box-shadow: $s-type-3
     visibility: hidden
     opacity: 0
     transition: 0.2s
