--- a/app/sass/components/unread.sass
+++ b/app/sass/components/unread.sass
@@ -3,7 +3,7 @@
   line-height: 1
   font-weight: 600
   background-color: $c-surfie-green
-  border-radius: $r-primary
+  border-radius: $r-type-1
   display: inline-block
   padding: 5px 9px
   color: $c-white
