--- a/app/sass/components/upload-documents-box.sass
+++ b/app/sass/components/upload-documents-box.sass
@@ -14,8 +14,8 @@
     position: relative
     flex: 1
     background-color: $c-white
-    border-radius: $r-primary
-    box-shadow: $s-primary
+    border-radius: $r-type-1
+    box-shadow: $s-type-1
     padding: 20px
     display: flex
     align-items: center
