--- a/app/sass/components/user-dropdown-menu.sass
+++ b/app/sass/components/user-dropdown-menu.sass
@@ -10,7 +10,7 @@
     align-items: center
     height: 40px
     padding: 0 15px
-    border-radius: $r-secondary
+    border-radius: $r-type-3
     transition: 0.2s
     background-color: transparent
     &:hover,
