--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -90,3 +90,4 @@
 @import ./components/create-service
 @import ./components/manage-skills
 @import ./components/manage-skills-dropdown
+@import ./components/change-position-dropdown
