--- a/app/pug/pages/employee-settings/general.pug
+++ b/app/pug/pages/employee-settings/general.pug
@@ -3,6 +3,7 @@ include /partials/button
 include /partials/link
 include /partials/editable-text
 include /partials/chip
+include /partials/change-position-dropdown
 -
   var list1 = [
     {left:'Accoun type:', right:'Employer'},
@@ -31,17 +32,27 @@ include /partials/chip
   .row
     //- Column
     div(class="col-12 col-xl-3 col-xxl-2 offset-0 offset-xxl-1 mb-40 mb-xxl-0")
+      .mb-30
+        .column-group.column-group--sm.column-group--justify-items-center
+          .column-group__item
+            .edit-avatar
+              +avatar({size:'xl', image:'images/user/avatar.jpg'})
+              .edit-avatar__button
+                +button({bg:'alabaster', type:'round', size:'50'})(type="button" data-modal-open="edit-avatar-modal")
+                  +icon({name:'camera', fill:'surfie-green', width:'18', height:'16'})
+          .column-group__item
+            +change-position-dropdown()
+          .column-group__item
+            p.p-sm Member since: 2015-04-12
+          .column-group__item
+            +link()(data-modal-open="password-change-modal")| Change password
       .column-group.column-group--sm.column-group--justify-items-center
         .column-group__item
-          .edit-avatar
-            +avatar({size:'xl', image:'images/user/avatar.jpg'})
-            .edit-avatar__button
-              +button({bg:'alabaster', type:'round', size:'50'})(type="button" data-modal-open="edit-avatar-modal")
-                +icon({name:'camera', fill:'surfie-green', width:'18', height:'16'})
+          +button({bg:'white', shadow:true})(type="button")
+            +icon({name:'triangle-right', fill:'surfie-green', width:'11', height:'14', classes:'button__icon'})
+            span Unsuspend
         .column-group__item
-          p.p-sm Member since: 2015-04-12
-        .column-group__item
-          +link()(data-modal-open="password-change-modal")| Change password
+          +button({bg:'white', color:'brick-red', shadow:true})(type="button")| Delete account
     //- Column
     div(class="col-12 col-md-6 col-xl-3 mb-40 mb-xxl-0")
       .column-heading
