--- a/app/pug/partials/skills-dropdown.pug
+++ b/app/pug/partials/skills-dropdown.pug
@@ -10,20 +10,19 @@ mixin skills-dropdown(props = {})
         +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
     .dropdown__body.skills-dropdown__body
       .skills-dropdown__header
-        p.font-semibold Skills
-        p.font-semibold.text-silver-chalice 5234 skills
+        h5 Skills
+        h5.text-silver-chalice 5234 skills
       .skills-dropdown__search
         .input-group
           +input({border:'alto', classes:'input-group__input'})(type="text" placeholder="Search")
           .input-group__append
             +icon({name:'search', fill:'silver-chalice', width:'12', height:'12'})
-      .skills-dropdown__variants
-        .skills-dropdown__variants-title
-          h5 Chose skill from the list and confirm
-        div(data-dropdown-simplebar class="custom-scroll skills-dropdown__variants-container")
-          .column-group.column-group--sm
-            each item in ['Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop', 'Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop']
-              .column-group__item
-                +skill-checkbox({title:item, classes:'skills-dropdown__skill'})
+      .skills-dropdown__title
+        h6 Chose skill from the list and confirm
+      div(data-dropdown-simplebar class="custom-scroll skills-dropdown__wrap")
+        .column-group.column-group--sm
+          each item in ['Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop', 'Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop']
+            .column-group__item
+              +skill-checkbox({title:item, classes:'skills-dropdown__skill'})
       .skills-dropdown__footer
-        +button({border:'surfie-green', shadow:true})(type="button")| Confirm
+        +button({border:'surfie-green'})(type="button" data-dropdown-close="skills-dropdown")| Confirm
