--- a/app/sass/components/alert.sass
+++ b/app/sass/components/alert.sass
@@ -3,7 +3,7 @@
   align-items: center
   justify-content: center
   background-color: rgba($c-surfie-green, 0.1)
-  border-radius: $r-secondary
+  border-radius: $r-type-3
   padding: 15px 25px
   +media-max($bp-xs)
     padding: 10px 20px
