--- a/app/sass/components/button/button.sass
+++ b/app/sass/components/button/button.sass
@@ -8,7 +8,7 @@
   line-height: 1
   font-weight: 600
   z-index: 1
-  border-radius: $r-primary
+  border-radius: $r-type-1
   border: 1px solid transparent
   transition: 0.2s
   user-select: none
