--- a/app/sass/components/catalog.sass
+++ b/app/sass/components/catalog.sass
@@ -19,7 +19,7 @@
     justify-content: center
     padding: 0 30px
     background-color: $c-alabaster
-    border-radius: $r-primary $r-primary 0 0
+    border-radius: $r-type-1 $r-type-1 0 0
     user-select: none
     cursor: pointer
     &.is-active
@@ -42,8 +42,8 @@
       color: $c-silver-chalice
   &__box
     background-color: $c-white
-    box-shadow: $s-primary
-    border-radius: 0 $r-primary $r-primary $r-primary
+    box-shadow: $s-type-1
+    border-radius: 0 $r-type-1 $r-type-1 $r-type-1
     width: 100%
   &__filters
     padding: 40px 0
