--- a/app/sass/components/checkbox.sass
+++ b/app/sass/components/checkbox.sass
@@ -25,7 +25,7 @@
     left: 0
     width: 100%
     height: 100%
-    border-radius: $r-primary
+    border-radius: $r-type-1
     border: 2px solid $c-surfie-green
     overflow: hidden
     &:before
