--- a/app/sass/components/document-list-item.sass
+++ b/app/sass/components/document-list-item.sass
@@ -3,7 +3,7 @@
   display: flex
   align-items: center
   background: $c-white
-  border-radius: $r-secondary
+  border-radius: $r-type-3
   padding: 8px 20px
   &__progress
     position: absolute
