--- a/app/sass/components/editable-text.sass
+++ b/app/sass/components/editable-text.sass
@@ -13,7 +13,7 @@
     min-width: 50px
     border: 1px solid transparent
     border-right: 0
-    border-radius: $r-primary 0 0 $r-primary
+    border-radius: $r-type-1 0 0 $r-type-1
     padding: 3px 10px
     outline: 0px solid transparent
     transition: 0.2s
@@ -30,7 +30,7 @@
         border-color: $c-surfie-green
         opacity: 1
   &__append
-    border-radius: 0 $r-primary $r-primary 0
+    border-radius: 0 $r-type-1 $r-type-1 0
     display: flex
     align-items: center
     padding-right: 10px
