--- a/app/sass/components/form-box.sass
+++ b/app/sass/components/form-box.sass
@@ -1,7 +1,7 @@
 .form-box
   width: 100%
   border: 1px solid $c-alto
-  border-radius: $r-primary
+  border-radius: $r-type-1
   background-color: $c-white
   padding: 40px 80px 60px
   +media-max($bp-md)
