--- a/app/sass/components/form-steps.sass
+++ b/app/sass/components/form-steps.sass
@@ -26,7 +26,7 @@ $c-text  : #9b9b9b
       border-left: 10px solid $c-white
       z-index: 1
     &:nth-child(1)
-      border-radius: $r-primary 0 0 $r-primary
+      border-radius: $r-type-1 0 0 $r-type-1
       background-color: $c-step-1
       z-index: 3
       &:after
