--- a/app/sass/components/navigation.sass
+++ b/app/sass/components/navigation.sass
@@ -21,7 +21,7 @@
     color: $c-mine-shaft
     display: flex
     align-items: center
-    border-radius: $r-secondary
+    border-radius: $r-type-3
     padding: 10px 12px
     transition: 0.2s
     user-select: none
