--- a/app/sass/components/palette.sass
+++ b/app/sass/components/palette.sass
@@ -1,5 +1,5 @@
 .palette
   display: inline-flex
   background-color: $c-alabaster
-  border-radius: $r-primary
+  border-radius: $r-type-1
   padding: 20px 40px
