--- a/app/sass/components/upload-documents.sass
+++ b/app/sass/components/upload-documents.sass
@@ -1,7 +1,7 @@
 .upload-documents
   width: 100%
   background-color: $c-alabaster
-  border-radius: $r-primary
+  border-radius: $r-type-1
   &__header
     padding: 25px
     display: flex
