--- a/app/sass/components/button/button-colors.sass
+++ b/app/sass/components/button/button-colors.sass
@@ -1,6 +1,6 @@
 .button
   // Colors
-  @each $name, $color in ('surfie-green':$c-surfie-green,'mine-shaft':$c-mine-shaft,'brick-red':$c-brick-red)
+  @each $name, $color in ('surfie-green':$c-surfie-green, 'mine-shaft':$c-mine-shaft, 'brick-red':$c-brick-red, 'tundora':$c-tundora)
     &--color-#{$name}
       color: $color
       &:hover, &:focus, &:active
