--- a/app/pug/partials/notifications-dropdown.pug
+++ b/app/pug/partials/notifications-dropdown.pug
@@ -6,7 +6,7 @@ mixin notifications-dropdown(props = {})
         +icon({name:'bell', fill:'surfie-green', width:'24', height:'25'})
       .notifications-dropdown__toggle-title 4
     .dropdown__body.notifications-dropdown__body
-      div(data-dropdown-simplebar class="custom-scroll notifications-dropdown__scroll")
+      div(data-simplebar class="custom-scroll notifications-dropdown__scroll")
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.
