--- a/app/pug/partials/select.pug
+++ b/app/pug/partials/select.pug
@@ -22,7 +22,7 @@ mixin select(props = {})
       if(search)
         .select__search
           +input({size:'sm', border:'alto', classes:'js-select-search'})(type="text" placeholder="Type something")
-      div(data-select-simplebar class="custom-scroll select__dropdown-scroll")
+      div(data-simplebar class="custom-scroll select__dropdown-scroll")
         div(class="select__options js-select-options")
           each option in options
             div(class="select__option js-select-option" data-option=option.name)
