--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -91,3 +91,4 @@
 @import ./components/manage-skills
 @import ./components/manage-skills-dropdown
 @import ./components/change-position-dropdown
+@import ./components/permissions-box
