permissions-page page was added, manage-position-dropdown component was added,

--- a/app/pug/employers-page.pug
+++ b/app/pug/employers-page.pug
@@ -26,7 +26,7 @@ block content
             h2.text-surfie-green Employers
           .employers-page__heading-buttons
             .button-group
-              +button({border:'surfie-green', classes:'button-group__button'})(href="#")| Permissions
+              +button({border:'surfie-green', classes:'button-group__button'})(href="permissions-page.html")| Permissions
               .button-group__button
                 +invite-employee-dropdown()
         .employers-page__catalog
