--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -19,6 +19,7 @@
 @import ./pages/employer-application-page
 @import ./pages/settings-page
 @import ./pages/employers-page
+@import ./pages/permissions-page
 // Components
 @import ./components/spinner
 @import ./components/columng-group
@@ -92,3 +93,4 @@
 @import ./components/manage-skills-dropdown
 @import ./components/change-position-dropdown
 @import ./components/permissions-box
+@import ./components/manage-position-dropdown
