permissions-page-admin tab was finished

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -94,3 +94,4 @@
 @import ./components/change-position-dropdown
 @import ./components/permissions-box
 @import ./components/manage-position-dropdown
+@import ./components/permissions-control-dropdown
