--- a/app/pug/pages/permissions-page/admin.pug
+++ b/app/pug/pages/permissions-page/admin.pug
@@ -1,1 +1,25 @@
+include /partials/permissions-box
+include /partials/permissions-control-dropdown
+
 .catalog__content-wrap
+  .row
+    div(class="col-12 col-xxl-1 offset-0 offset-xxl-11 d-flex justify-content-end justify-content-xxl-start")
+      +permissions-control-dropdown()
+    div(class="col-12 col-md-6 col-xl-4 col-xxl-3 offset-0 offset-xxl-1 mb-40")
+      .column-group.column-group--sm
+        .column-group__item
+          h4 Actions
+        .column-group__item
+          +permissions-box()
+    div(class="col-12 col-md-6 col-xl-4 col-xxl-3 mb-40")
+      .column-group.column-group--sm
+        .column-group__item
+          h4 Visibility
+        .column-group__item
+          +permissions-box()
+    div(class="col-12 col-md-6 col-xl-4 col-xxl-3 mb-40")
+      .column-group.column-group--sm
+        .column-group__item
+          h4 Worker Summary
+        .column-group__item
+          +permissions-box()
